# ai_image_processing

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_visual_unit_source_asset_key.py  0003_ai_watermark_reports.py
app/: __init__.py  cli.py  main.py
app/adapters/: ai_watermark_detection.py  alibaba_listing_vision.py  image_generation.py  openai_multimodal.py  product_roll_core_vision.py
app/api/: router.py
app/core/: __init__.py  config.py  ids.py  product_specs.py  states.py  taxonomy.py
app/db/: session.py
app/models/: __init__.py  analysis.py  asset.py  generation.py  mixins.py  prompt.py  publish.py  qa.py  visual_unit.py  watermark.py  workflow.py
app/prompts/: image_analyst.md  prompt_compiler.md  qa_checker.md  retry_planner.md  visual_director.md
app/rules/: banned_content.rules.yaml  claims_policy.yaml  color_wrap.rules.yaml  ppf.rules.yaml  window_tint.rules.yaml
app/schemas/: __init__.py  assets.py  generation.py  outputs.py  prompt_contracts.py  visual_units.py
app/services/: acceptance_policy_service.py  alibaba_listing_selection_service.py  alibaba_listing_vision_benchmark_service.py  analysis_service.py  brief_service.py  catalog_info_panel_renderer.py  color_card_inspection_package_service.py  color_card_production_service.py  color_card_service.py  color_material_qa_service.py  demo_data.py  generation_service.py  (+18 more)
docs/: end_to_end_demo.md
scripts/: color_card_review_artifacts.py
(+26 files in other folders)
