[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automotive-film-image-factory"
version = "0.1.0"
description = "AI image production factory for automotive film ecommerce assets"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "celery>=5.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pillow>=10.4",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]
watermark-detection = [
  "remove-ai-watermarks @ git+https://github.com/wiltodelta/remove-ai-watermarks.git@4c6b56f888ff4afb3d53c82f9c8cf19b180282cb",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.workers.tasks"]
disallow_untyped_decorators = false
